--- a/config/database.yml
+++ b/config/database.yml
@@ -2,8 +2,8 @@ default: &default
   adapter: postgresql
   host: localhost
   encoding: utf8
-  username: postgres 
-  password: devsinc
+  username: postgres
+  password: 12345
   pool: 5
   port: 5432
   timeout: 5000
